--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="utf-8">
-        <title>CaterServ - Catering Services Website Template</title>
+        <title>Wangeci's Kitchen</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="" name="keywords">
         <meta content="" name="description">
@@ -27,6 +27,8 @@
 
         <!-- Template Stylesheet -->
         <link href="css/style.css" rel="stylesheet">
+
+      
     </head>
 
     <body>
@@ -36,7 +38,6 @@
             <div class="spinner-grow text-primary" role="status"></div>
         </div>
         <!-- Spinner End -->
-
 
         <!-- Navbar start -->
         <div class="container-fluid nav-bar">
@@ -50,12 +51,12 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarCollapse">
                         <div class="navbar-nav mx-auto">
-                            <a href="index.html" class="nav-item nav-link">Home</a>
+                            <a href="index.html" class="nav-item nav-link ">Home</a>
                             <a href="about.html" class="nav-item nav-link active">About</a>
                             <a href="service.html" class="nav-item nav-link">Services</a>
                             <a href="event.html" class="nav-item nav-link">Events</a>
                             <a href="menu.html" class="nav-item nav-link">Menu</a>
-                            <div class="nav-item dropdown">
+                            <!-- <div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                                 <div class="dropdown-menu bg-light">
                                     <a href="book.html" class="dropdown-item">Booking</a>
@@ -64,7 +65,7 @@
                                     <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                                     <a href="404.html" class="dropdown-item">404 Page</a>
                                 </div>
-                            </div>
+                            </div> -->
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
                         </div>
                         <button class="btn-search btn btn-primary btn-md-square me-4 rounded-circle d-none d-lg-inline-flex" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fas fa-search"></i></button>
@@ -73,7 +74,7 @@
                 </nav>
             </div>
         </div>
-        <!-- Navbar End -->
+        <!-- Navbar end -->
 
 
         <!-- Modal Search Start -->
@@ -110,100 +111,99 @@
         <!-- Hero End -->
 
 
-        <!-- About Satrt -->
-        <div class="container-fluid py-6">
-            <div class="container">
-                <div class="row g-5 align-items-center">
-                    <div class="col-lg-5 wow bounceInUp" data-wow-delay="0.1s">
-                        <img src="img/about.jpg" class="img-fluid rounded" alt="">
+       <!-- About Satrt -->
+       <div class="container-fluid py-6">
+        <div class="container">
+            <div class="row g-5 align-items-center">
+                <div class="col-lg-5 wow bounceInUp" data-wow-delay="0.1s">
+                    <img src="img/about.jpg" class="img-fluid rounded" alt="">
+                </div>
+                <div class="col-lg-7 wow bounceInUp" data-wow-delay="0.3s">
+                    <small class="d-inline-block fw-bold text-dark text-uppercase bg-light border border-primary rounded-pill px-4 py-1 mb-3">About Us</small>
+                    <h1 class="display-5 mb-4">Trusted By 200 + satisfied clients</h1>
+                    <p class="mb-4">At Wangeci’s Kitchen, we believe that exceptional catering is not just about serving food—it’s about
+                         crafting memorable experiences. Founded with a passion for culinary excellence and a commitment to impeccable service, 
+                         our company is dedicated to transforming every event into a sophisticated celebration.</p>
+                    <div class="row g-4 text-dark mb-5">
+                        <div class="col-sm-6">
+                            <i class="fas fa-share text-primary me-2"></i>Fresh and Fast food Delivery
+                        </div>
+                        <div class="col-sm-6">
+                            <i class="fas fa-share text-primary me-2"></i>24/7 Customer Support
+                        </div>
+                        <div class="col-sm-6">
+                            <i class="fas fa-share text-primary me-2"></i>Easy Menu Customization Options
+                        </div>
+                        <div class="col-sm-6">
+                            <i class="fas fa-share text-primary me-2"></i>Delicious Deals for Delicious Meals
+                        </div>
                     </div>
-                    <div class="col-lg-7 wow bounceInUp" data-wow-delay="0.3s">
-                        <small class="d-inline-block fw-bold text-dark text-uppercase bg-light border border-primary rounded-pill px-4 py-1 mb-3">About Us</small>
-                        <h1 class="display-5 mb-4">Trusted By 200 + satisfied clients</h1>
-                        <p class="mb-4">Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore eit esdioilore magna aliqua. Ut enim ad minim veniam, 
-                            quis nostrud exercitation ullaemco laboeeiris nisi ut aliquip ex ea commodo consequat. Duis aute irure 
-                            dolor iesdein reprehendeerit in voluptate velit esse cillum dolore.</p>
-                        <div class="row g-4 text-dark mb-5">
-                            <div class="col-sm-6">
-                                <i class="fas fa-share text-primary me-2"></i>Fresh and Fast food Delivery
-                            </div>
-                            <div class="col-sm-6">
-                                <i class="fas fa-share text-primary me-2"></i>24/7 Customer Support
-                            </div>
-                            <div class="col-sm-6">
-                                <i class="fas fa-share text-primary me-2"></i>Easy Customization Options
-                            </div>
-                            <div class="col-sm-6">
-                                <i class="fas fa-share text-primary me-2"></i>Delicious Deals for Delicious Meals
+                    <a href="" class="btn btn-primary py-3 px-5 rounded-pill">About Us<i class="fas fa-arrow-right ps-2"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- About End -->
+
+
+       <!-- Fact Start-->
+       <div class="container-fluid faqt py-6">
+        <div class="container">
+            <div class="row g-4 align-items-center">
+                <div class="col-lg-7">
+                   <div class="row g-4">
+                        <div class="col-sm-4 wow bounceInUp" data-wow-delay="0.3s">
+                            <div class="faqt-item bg-primary rounded p-4 text-center">
+                                <i class="fas fa-users fa-4x mb-4 text-white"></i>
+                                <h1 class="display-4 text-light fw-bold" data-toggle="counter-up">689</h1>
+                                <p class="text-light text-uppercase fw-bold mb-0">Happy Customers</p>
                             </div>
                         </div>
-                        <a href="" class="btn btn-primary py-3 px-5 rounded-pill">About Us<i class="fas fa-arrow-right ps-2"></i></a>
+                        <div class="col-sm-4 wow bounceInUp" data-wow-delay="0.5s">
+                            <div class="faqt-item bg-primary rounded p-4 text-center">
+                                <i class="fas fa-users-cog fa-4x mb-4 text-white"></i>
+                                <h1 class="display-4 text-light fw-bold" data-toggle="counter-up">21</h1>
+                                <p class="text-light text-uppercase fw-bold mb-0">Expert Chefs</p>
+                            </div>
+                        </div>
+                        <div class="col-sm-4 wow bounceInUp" data-wow-delay="0.7s">
+                            <div class="faqt-item bg-primary rounded p-4 text-center">
+                                <i class="fas fa-check fa-4x mb-4 text-white"></i>
+                                <h1 class="display-4 text-light fw-bold" data-toggle="counter-up">99</h1>
+                                <p class="text-light text-uppercase fw-bold mb-0">Events Complete</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-5 wow bounceInUp" data-wow-delay="0.1s">
+                    <div class="video">
+                        <button type="button" class="btn btn-play" data-bs-toggle="modal" data-src="https://www.youtube.com/embed/DWRcNpR6Kdc" data-bs-target="#videoModal">
+                            <span></span>
+                        </button>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- About End -->
-
-
-        <!-- Fact Start-->
-        <div class="container-fluid faqt py-6">
-            <div class="container">
-                <div class="row g-4 align-items-center">
-                    <div class="col-lg-7">
-                       <div class="row g-4">
-                            <div class="col-sm-4 wow bounceInUp" data-wow-delay="0.3s">
-                                <div class="faqt-item bg-primary rounded p-4 text-center">
-                                    <i class="fas fa-users fa-4x mb-4 text-white"></i>
-                                    <h1 class="display-4 fw-bold" data-toggle="counter-up">689</h1>
-                                    <p class="text-dark text-uppercase fw-bold mb-0">Happy Customers</p>
-                                </div>
-                            </div>
-                            <div class="col-sm-4 wow bounceInUp" data-wow-delay="0.5s">
-                                <div class="faqt-item bg-primary rounded p-4 text-center">
-                                    <i class="fas fa-users-cog fa-4x mb-4 text-white"></i>
-                                    <h1 class="display-4 fw-bold" data-toggle="counter-up">107</h1>
-                                    <p class="text-dark text-uppercase fw-bold mb-0">Expert Chefs</p>
-                                </div>
-                            </div>
-                            <div class="col-sm-4 wow bounceInUp" data-wow-delay="0.7s">
-                                <div class="faqt-item bg-primary rounded p-4 text-center">
-                                    <i class="fas fa-check fa-4x mb-4 text-white"></i>
-                                    <h1 class="display-4 fw-bold" data-toggle="counter-up">253</h1>
-                                    <p class="text-dark text-uppercase fw-bold mb-0">Events Complete</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-5 wow bounceInUp" data-wow-delay="0.1s">
-                        <div class="video">
-                            <button type="button" class="btn btn-play" data-bs-toggle="modal" data-src="https://www.youtube.com/embed/DWRcNpR6Kdc" data-bs-target="#videoModal">
-                                <span></span>
-                            </button>
-                        </div>
+    </div>
+    <!-- Modal Video -->
+    <div class="modal fade" id="videoModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content rounded-0">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Youtube Video</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <!-- 16:9 aspect ratio -->
+                    <div class="ratio ratio-16x9">
+                        <iframe class="embed-responsive-item" src="" id="video" allowfullscreen allowscriptaccess="always"
+                            allow="autoplay"></iframe>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- Modal Video -->
-        <div class="modal fade" id="videoModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content rounded-0">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Youtube Video</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                        <!-- 16:9 aspect ratio -->
-                        <div class="ratio ratio-16x9">
-                            <iframe class="embed-responsive-item" src="" id="video" allowfullscreen allowscriptaccess="always"
-                                allow="autoplay"></iframe>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Fact End -->
-
+    </div>
+    <!-- Fact End -->
 
         <!-- Team Start -->
         <div class="container-fluid team py-6">
@@ -285,8 +285,8 @@
                 <div class="row">
                     <div class="col-lg-3 col-md-6">
                         <div class="footer-item">
-                            <h1 class="text-primary">Cater<span class="text-dark">Serv</span></h1>
-                            <p class="lh-lg mb-4">There cursus massa at urnaaculis estieSed aliquamellus vitae ultrs condmentum leo massamollis its estiegittis miristum.</p>
+                            <h1 class="text-primary">Wangeci's<span class="text-dark"> Kitchen</span></h1>
+                            <p class="lh-lg mb-4">"Elevate Every Occasion with Extraordinary Flavors."</p>
                             <div class="footer-icon d-flex">
                                 <a class="btn btn-primary btn-sm-square me-2 rounded-circle" href=""><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-primary btn-sm-square me-2 rounded-circle" href=""><i class="fab fa-twitter"></i></a>
@@ -310,10 +310,10 @@
                         <div class="footer-item">
                             <h4 class="mb-4">Contact Us</h4>
                             <div class="d-flex flex-column align-items-start">
-                                <p><i class="fa fa-map-marker-alt text-primary me-2"></i> 123 Street, New York, USA</p>
-                                <p><i class="fa fa-phone-alt text-primary me-2"></i> (+012) 3456 7890 123</p>
+                                <p><i class="fa fa-map-marker-alt text-primary me-2"></i> Nairobi, Kenya</p>
+                                <p><i class="fa fa-phone-alt text-primary me-2"></i> +254 729 883918 </p>
                                 <p><i class="fas fa-envelope text-primary me-2"></i> info@example.com</p>
-                                <p><i class="fa fa-clock text-primary me-2"></i> 26/7 Hours Service</p>
+                                <p><i class="fa fa-clock text-primary me-2"></i> 24/7 Hours Service</p>
                             </div>
                         </div>
                     </div>
@@ -322,22 +322,22 @@
                             <h4 class="mb-4">Social Gallery</h4>
                             <div class="row g-2">
                                 <div class="col-4">
-                                     <img src="img/menu-01.jpg" class="img-fluid rounded-circle border border-primary p-2" alt="">
+                                     <img src="img/beef.jpeg" class="img-fluid rounded-circle border border-primary p-2" alt="">
                                 </div>
                                 <div class="col-4">
-                                     <img src="img/menu-02.jpg" class="img-fluid rounded-circle border border-primary p-2" alt="">
+                                     <img src="img/chapo.jpeg" class="img-fluid rounded-circle border border-primary p-2" alt="">
                                 </div>
                                 <div class="col-4">
-                                     <img src="img/menu-03.jpg" class="img-fluid rounded-circle border border-primary p-2" alt="">
+                                     <img src="img/dondo.jpeg" class="img-fluid rounded-circle border border-primary p-2" alt="">
                                 </div>
                                 <div class="col-4">
-                                     <img src="img/menu-04.jpg" class="img-fluid rounded-circle border border-primary p-2" alt="">
+                                     <img src="img/ricebeef.jpeg" class="img-fluid rounded-circle border border-primary p-2" alt="">
                                 </div>
                                 <div class="col-4">
-                                     <img src="img/menu-05.jpg" class="img-fluid rounded-circle border border-primary p-2" alt="">
+                                     <img src="img/Samosaa.jpeg" class="img-fluid rounded-circle border border-primary p-2" alt="">
                                 </div>
                                 <div class="col-4">
-                                     <img src="img/menu-06.jpg" class="img-fluid rounded-circle border border-primary p-2" alt="">
+                                     <img src="img/sose.jpeg" class="img-fluid rounded-circle border border-primary p-2" alt="">
                                 </div>
                             </div>
                         </div>
@@ -353,13 +353,10 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        <span class="text-light"><a href="#"><i class="fas fa-copyright text-light me-2"></i>Your Site Name</a>, All right reserved.</span>
+                        <span class="text-light"><a href="#"><i class="fas fa-copyright text-light me-2"></i>Wangeci's Kitchen</a>, All right reserved.</span>
                     </div>
                     <div class="col-md-6 my-auto text-center text-md-end text-white">
-                        <!--/*** This template is free as long as you keep the below author’s credit link/attribution link/backlink. ***/-->
-                        <!--/*** If you'd like to use the template without the below author’s credit link/attribution link/backlink, ***/-->
-                        <!--/*** you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". ***/-->
-                        Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a> Distributed By <a class="border-bottom" href="https://themewagon.com">ThemeWagon</a>
+                        Designed By <a class="border-bottom" href="">Tony</a></a>
                     </div>
                 </div>
             </div>
