--- a/about.html
+++ b/about.html
@@ -116,7 +116,7 @@
         <div class="container">
             <div class="row g-5 align-items-center">
                 <div class="col-lg-5 wow bounceInUp" data-wow-delay="0.1s">
-                    <img src="img/about.jpg" class="img-fluid rounded" alt="">
+                    <img src="img/aboutt.jpeg" class="img-fluid rounded" alt="">
                 </div>
                 <div class="col-lg-7 wow bounceInUp" data-wow-delay="0.3s">
                     <small class="d-inline-block fw-bold text-dark text-uppercase bg-light border border-primary rounded-pill px-4 py-1 mb-3">About Us</small>
@@ -206,7 +206,7 @@
     <!-- Fact End -->
 
         <!-- Team Start -->
-        <div class="container-fluid team py-6">
+        <!-- <div class="container-fluid team py-6">
             <div class="container">
                 <div class="text-center wow bounceInUp" data-wow-delay="0.1s">
                     <small class="d-inline-block fw-bold text-dark text-uppercase bg-light border border-primary rounded-pill px-4 py-1 mb-3">Our Team</small>
@@ -275,7 +275,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- Team End -->
 
 
