--- a/index.html
+++ b/index.html
@@ -1183,7 +1183,7 @@
 
         
         <!-- Team Start -->
-        <div class="container-fluid team py-6">
+        <!-- <div class="container-fluid team py-6">
             <div class="container">
                 <div class="text-center wow bounceInUp" data-wow-delay="0.1s">
                     <small class="d-inline-block fw-bold text-dark text-uppercase bg-light border border-primary rounded-pill px-4 py-1 mb-3">Our Team</small>
@@ -1252,7 +1252,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- Team End -->
 
 
